<resources>
    <string name="app_name">Our Kos</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Masuk</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="login_failed">"Login Gagal"</string>
    <string name="forget_password">Lupa Password</string>
    <!-- related to register   -->
    <string name="create_account">Buat Akun</string>
    <string name="action_sign_up">Daftar</string>
    <string name="prompt_confirm">Konfirmasi Password</string>
    <string name="title_activity_main">OurKos</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifikasi</string>
    <string name="back_to_login">Login</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="pengguna">User</string>
    <string name="pemilik">Owner</string>
</resources>
